--- a/index.css
+++ b/index.css
@@ -42,9 +42,8 @@ body {
     margin-left: 1.5rem;
     
 }
-h2,h3{
-    font-family:'Outfit', serif;
-}
+
+
 
 .text-menu {
     font-size: 20px;
@@ -85,7 +84,7 @@ ul li::marker, ol li::marker {
     color: var(--card-color);
 }
 
-h3 {
+h2 {
     color: var(--title-color);
     padding: 1rem 0;
 }
@@ -96,13 +95,17 @@ h3 {
     gap: 1rem;
 }
 
-.line, .table-line {
-    width: 90%;
-    max-width: 900px;
-    height: 1px;
+.line{
+    width: 97%;
+    max-width: 990px;
+    height: 2px;
     background-color: var(--line-color);
     margin: 0.5rem 0;
+
 }
+ .table-line {
+    width: 90%;
+
 
 .g-coior {
     color: var(--title-color);
@@ -112,9 +115,9 @@ h3 {
 @media (max-width: 375px) {
 
     .attribution {
-        margin: 0rem ;
-       
+        margin: 0rem ;  
     }
+
     .Food-Image {
         width: 100%;
         max-width: 375px;
